Thu Apr 18 17:44:56 BST 2002  Olly Betts <olly@survex.com>

	* Added poslist1 test as suggested by a TODO entry.

Thu Apr 18 14:17:24 BST 2002  Olly Betts <olly@survex.com>

	* buildall: Removed search for GNU make (as of automake
	  1.5 it's not needed for automake and we aim to have portable
	  makefiles).  Made buildall more portable.

Thu Apr 18 14:16:18 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config.nodep is a generated file, so don't look for it in
	  srcdir.

Thu Apr 18 12:45:04 BST 2002  Olly Betts <olly@survex.com>

	* Added bindings/php4/xapian/.cvsignore.

Thu Apr 18 12:36:53 BST 2002  Olly Betts <olly@survex.com>

	* Minor tweaks to "Makefile" section in HACKING.

Thu Apr 18 12:26:21 BST 2002  Olly Betts <olly@survex.com>

	* Yet more Makefile portability fixes; added section to HACKING
	  summarising my recent experiences.

Thu Apr 18 11:26:37 BST 2002  Olly Betts <olly@survex.com>

	* Corrected the sense of the test in the previous check-in.

Thu Apr 18 11:08:04 BST 2002  Olly Betts <olly@survex.com>

	* Use case instead of echo/sed to replace dirname.

Thu Apr 18 10:19:01 BST 2002  Olly Betts <olly@survex.com>

	* Another Makefile portability tweak. 

Wed Apr 17 16:07:02 BST 2002  Olly Betts <olly@survex.com>

	* bindings/php4/Makefile.am: Fixed a couple of problems with
	  recent changes.

Wed Apr 17 15:32:44 BST 2002  Olly Betts <olly@survex.com>

	* Makefile portability improvements.

Wed Apr 17 14:29:21 BST 2002  Olly Betts <olly@survex.com>

	* Replaced uses of GNU make specific features with more portable
	  ones.

Wed Apr 17 12:43:07 BST 2002  Olly Betts <olly@survex.com>

	* Update todo list. 

Wed Apr 17 12:41:03 BST 2002  Olly Betts <olly@survex.com>

	* Removed BrightStation's logo from the documentation.

Wed Apr 17 12:27:07 BST 2002  Olly Betts <olly@survex.com>

	* xapian-config: Removed --uninst support - it's very hard to make it
	  work reliably and we're better off directing our efforts towards